compiler/tests/should-fail/HostClash.via
/* NameClashError */

host alice : {A}
host alice : {A}

fun main() {
    val x: int = 0;
}
